--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.4",
-    "@vitest/coverage-v8": "^2.0.4"
+    "@vitest/coverage-v8": "^2.0.4",
+    "esbuild": "0.25.9"
   }
 }
