--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.19",
     "jsdom": "^24.1.1",
     "postcss": "^8.4.39",
@@ -53,5 +53,9 @@
     "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^3.2.4"
+  },
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
