--- a/.env.example
+++ b/.env.example
@@ -56,7 +56,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # =============================================================================
 # FRONTEND CONFIGURATION
 # =============================================================================
-VITE_API_URL=http://localhost:${API_PORT}
+VITE_API_URL=http://localhost:8000
 VITE_APP_NAME=Dharma
 VITE_APP_DESCRIPTION="The Underground Network for Sneaker Culture"
 
@@ -64,7 +64,7 @@ VITE_APP_DESCRIPTION="The Underground Network for Sneaker Culture"
 # MONITORING & OBSERVABILITY
 # =============================================================================
 PROMETHEUS_PORT=9090
-GRAFANA_PORT=3000
+GRAFANA_PORT=3001
 
 # =============================================================================
 # WORKER CONFIGURATION
@@ -76,7 +76,7 @@ CELERY_RESULT_BACKEND=${REDIS_URL}
 # SECURITY SETTINGS
 # =============================================================================
 # CORS origins (comma-separated list)
-CORS_ORIGINS=http://localhost:${FRONTEND_PORT},http://localhost:3000
+CORS_ORIGINS=http://localhost:5173,http://localhost:3001
 
 # Rate limiting
 RATE_LIMIT_PER_MINUTE=60
