--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@hookform/resolvers": "^5.2.1",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -24,22 +22,30 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
-    "@tanstack/react-query-devtools": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^5.0.1",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.3.19",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.417.0",
-    "react-hook-form": "^7.52.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.64.0",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "use-debounce": "^10.0.5",
     "vite": "^7.1.3",
-    "zod": "^3.23.8",
+    "zod": "^3.25.76",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
