middleware and core services

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,9 @@ VITE_APP_DESCRIPTION="The Underground Network for Sneaker Culture"
 # =============================================================================
 PROMETHEUS_PORT=9090
 GRAFANA_PORT=3001
+SENTRY_DSN=
+TRACES_SAMPLE_RATE=0.1
+PROFILES_SAMPLE_RATE=0.1
 
 # =============================================================================
 # WORKER CONFIGURATION
