--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -62,6 +62,11 @@ jobs:
     - name: Run tests
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/dharma_test
+        ALEMBIC_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/dharma_test
+        PGUSER: postgres
+        PGPASSWORD: postgres
+        PGHOST: localhost
+        PGPORT: 5432
         REDIS_URL: redis://localhost:6379/0
         SECRET_KEY: test_secret_key_for_ci
         ENVIRONMENT: test
