--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     env_file:
       - .env
     environment:
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/worker
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379/0
       - ENVIRONMENT=${ENVIRONMENT}
@@ -95,7 +95,7 @@ services:
     env_file:
       - .env
     environment:
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/worker
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379/0
       - ENVIRONMENT=${ENVIRONMENT}
@@ -119,10 +119,12 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "${FRONTEND_PORT:-5173}:5173"
+      - "${FRONTEND_PORT:-5177}:5177"
     volumes:
       - ./frontend:/app:cached
       - /app/node_modules
+    environment:
+      - PORT=5177
     networks:
       - appnet
 
